// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`convertSnootyAstToMdast - node snapshots | admonition note 1`] = `
"<Admonition name="note">
  Note text
</Admonition>"
`;

exports[`convertSnootyAstToMdast - node snapshots | blockquote 1`] = `"> quote"`;

exports[`convertSnootyAstToMdast - node snapshots | bullet_list 1`] = `"* Item"`;

exports[`convertSnootyAstToMdast - node snapshots | card-group 1`] = `
"<CardGroup cols={3}>
  Card
</CardGroup>"
`;

exports[`convertSnootyAstToMdast - node snapshots | code block 1`] = `
"\`\`\`js
console.log("hi")
\`\`\`"
`;

exports[`convertSnootyAstToMdast - node snapshots | code block — caption with inner double quotes 1`] = `
"\`\`\`js caption={'Say "hello" world'}
x = 1
\`\`\`"
`;

exports[`convertSnootyAstToMdast - node snapshots | code block — full attributes 1`] = `
"\`\`\`javascript copyable={true} emphasize_lines={[1,3]} linenos={true} caption={'My caption'} source={'https://example.com/src.js'} lineno_start={5}
const x = 1;
const y = 2;
return x + y;
\`\`\`"
`;

exports[`convertSnootyAstToMdast - node snapshots | code block — multi-line with quotes and backslashes 1`] = `
"\`\`\`sh copyable={true}
mongoimport --db test --collection inventory ^
          --authenticationDatabase admin --username <user> --password <password> ^
          --drop --file ~\\downloads\\inventory.crud.json
\`\`\`"
`;

exports[`convertSnootyAstToMdast - node snapshots | comment node skipped 1`] = `""`;

exports[`convertSnootyAstToMdast - node snapshots | comment_block node skipped 1`] = `""`;

exports[`convertSnootyAstToMdast - node snapshots | cta-banner 1`] = `
"<CtaBanner color="green">
  CTA
</CtaBanner>"
`;

exports[`convertSnootyAstToMdast - node snapshots | definition list 1`] = `
"<DefinitionList>
  <DefinitionListItem>
    <DefinitionTerm>
      Term
    </DefinitionTerm>

    <DefinitionDescription>
      Definition
    </DefinitionDescription>
  </DefinitionListItem>
</DefinitionList>"
`;

exports[`convertSnootyAstToMdast - node snapshots | definition list with inline_target term 1`] = `
"<DefinitionList>
  <DefinitionListItem targetId="std-term-agent">
    <DefinitionTerm>
      agent <RefTarget id="std-term-agent" />
    </DefinitionTerm>

    <DefinitionDescription>
      A lightweight monitoring program.
    </DefinitionDescription>
  </DefinitionListItem>

  <DefinitionListItem>
    <DefinitionTerm>
      \`MongoClient\`
    </DefinitionTerm>

    <DefinitionDescription>
      The primary client class.
    </DefinitionDescription>
  </DefinitionListItem>
</DefinitionList>"
`;

exports[`convertSnootyAstToMdast - node snapshots | directive collapsible 1`] = `
"<Collapsible heading="Details" subHeading="Click to expand" headingLevel={1} expanded={false}>
  Collapsible body
</Collapsible>"
`;

exports[`convertSnootyAstToMdast - node snapshots | directive facet genre 1`] = `
"---
facets:
  genre: reference

---"
`;

exports[`convertSnootyAstToMdast - node snapshots | directive facet genre and programming_language 1`] = `
"---
facets:
  genre: reference
  programming_language: shell, python

---"
`;

exports[`convertSnootyAstToMdast - node snapshots | directive figure 1`] = `"<Image src="/images/figure.png" />"`;

exports[`convertSnootyAstToMdast - node snapshots | directive image 1`] = `"<Image src="/images/test.png" />"`;

exports[`convertSnootyAstToMdast - node snapshots | directive include 1`] = `"<Include src="/included-file" />"`;

exports[`convertSnootyAstToMdast - node snapshots | directive list-table 1`] = `
"<Table headerRows={1}>
  <TableHead>
    <TableRow>
      <TableHeaderCell>
        Version
      </TableHeaderCell>

      <TableHeaderCell>
        client 1.0
      </TableHeaderCell>

      <TableHeaderCell>
        client 2.0
      </TableHeaderCell>
    </TableRow>
  </TableHead>

  <TableBody>
    <TableRow>
      <TableCell>
        DB 7.0
      </TableCell>

      <TableCell>
        ✓
      </TableCell>

      <TableCell>
        ✓
      </TableCell>
    </TableRow>

    <TableRow>
      <TableCell>
        DB 8.0
      </TableCell>

      <TableCell>
        ✓
      </TableCell>

      <TableCell>
        \\-
      </TableCell>
    </TableRow>
  </TableBody>
</Table>"
`;

exports[`convertSnootyAstToMdast - node snapshots | directive literalinclude — no inlined content (falls back to include file) 1`] = `"<Include src="/src/code.js" />"`;

exports[`convertSnootyAstToMdast - node snapshots | directive literalinclude — with inlined code content (DOP-6823: inline directly, no path collision) 1`] = `
"\`\`\`terraform
resource "mongodbatlas_project" "example" {
  name = "example"
}
\`\`\`"
`;

exports[`convertSnootyAstToMdast - node snapshots | directive sharedinclude 1`] = `"<Include src="/shared-file" />"`;

exports[`convertSnootyAstToMdast - node snapshots | directive text (unwrapped) 1`] = `
"<Text>
  Plain content

  &#x20;from children
</Text>"
`;

exports[`convertSnootyAstToMdast - node snapshots | directive_argument node 1`] = `"Arg text"`;

exports[`convertSnootyAstToMdast - node snapshots | doc link 1`] = `"<Reference name="/docs/page" title="Doc Page" />"`;

exports[`convertSnootyAstToMdast - node snapshots | emphasis 1`] = `"*em*"`;

exports[`convertSnootyAstToMdast - node snapshots | enumerated_list 1`] = `"5. Five"`;

exports[`convertSnootyAstToMdast - node snapshots | enumerated_list loweralpha emits JSX ol 1`] = `
"<ol enumtype="loweralpha">
  <li>
    Alpha
  </li>

  <li>
    Beta
  </li>
</ol>"
`;

exports[`convertSnootyAstToMdast - node snapshots | enumerated_list loweralpha with non-1 start emits startat prop 1`] = `
"<ol enumtype="loweralpha" startat={3}>
  <li>
    Gamma
  </li>
</ol>"
`;

exports[`convertSnootyAstToMdast - node snapshots | expression directive emits Expression component 1`] = `
"<Expression term="db.collection.find()">
  Finds documents.
</Expression>"
`;

exports[`convertSnootyAstToMdast - node snapshots | field list 1`] = `
"<FieldList>
  <Field name="foo" label="Foo">
    Field content
  </Field>
</FieldList>"
`;

exports[`convertSnootyAstToMdast - node snapshots | footnote definition and reference 1`] = `
"See note<FootnoteReference />

<Footnote>
  Footnote text
</Footnote>"
`;

exports[`convertSnootyAstToMdast - node snapshots | generic ordered list 1`] = `"3. Third"`;

exports[`convertSnootyAstToMdast - node snapshots | heading 1`] = `"# Heading"`;

exports[`convertSnootyAstToMdast - node snapshots | hidden directive (toctree) 1`] = `""`;

exports[`convertSnootyAstToMdast - node snapshots | inline literal → inline code 1`] = `"\`code\`"`;

exports[`convertSnootyAstToMdast - node snapshots | inline_target 1`] = `"<RefTarget id="inline-id" />"`;

exports[`convertSnootyAstToMdast - node snapshots | line block 1`] = `"First line<br />Second line"`;

exports[`convertSnootyAstToMdast - node snapshots | line node with RST margin value and ref_role children 1`] = `"<Reference name="voyage-models" title="See all available models" /><br /><Reference name="voyage-api-client" title="Learn about the API" />"`;

exports[`convertSnootyAstToMdast - node snapshots | line node with children fallback 1`] = `"Hello <Guilabel>Save</Guilabel>"`;

exports[`convertSnootyAstToMdast - node snapshots | link reference 1`] = `"[link](https://example.com)"`;

exports[`convertSnootyAstToMdast - node snapshots | link reference with abbr role child 1`] = `"[<Abbr tooltip="MongoDB Query Language">MQL</Abbr>](https://example.com/docs)"`;

exports[`convertSnootyAstToMdast - node snapshots | list with bullet enumtype stays unordered 1`] = `"* Bullet"`;

exports[`convertSnootyAstToMdast - node snapshots | list with loweralpha enumtype emits JSX ol 1`] = `
"<ol enumtype="loweralpha">
  <li>
    Item
  </li>
</ol>"
`;

exports[`convertSnootyAstToMdast - node snapshots | method-selector 1`] = `
"<MethodSelector>
  Methods
</MethodSelector>"
`;

exports[`convertSnootyAstToMdast - node snapshots | named_reference node 1`] = `""`;

exports[`convertSnootyAstToMdast - node snapshots | only directive 1`] = `
"<Only expr="target == &#x22;mytarget&#x22;">
  Only content
</Only>"
`;

exports[`convertSnootyAstToMdast - node snapshots | ordered_list 1`] = `"1. First"`;

exports[`convertSnootyAstToMdast - node snapshots | paragraph 1`] = `"Hello world"`;

exports[`convertSnootyAstToMdast - node snapshots | procedure with two steps 1`] = `
"<Procedure style="connected">
  <Step>
    <StepHeading>
      First step
    </StepHeading>

    Do the first thing.
  </Step>

  <Step>
    <StepHeading>
      Second step
    </StepHeading>

    Do the second thing.
  </Step>
</Procedure>"
`;

exports[`convertSnootyAstToMdast - node snapshots | ref_role link 1`] = `"<Reference name="/ref/link" title="Ref Link" />"`;

exports[`convertSnootyAstToMdast - node snapshots | ref_role typed (authrole) 1`] = `"<RefRole type="authrole" name="Organization Owner">\`Organization Owner\`</RefRole>"`;

exports[`convertSnootyAstToMdast - node snapshots | ref_role with doc name renders as Reference not RefRole 1`] = `"<Reference name="/reference/some-page" title="Some Page" />"`;

exports[`convertSnootyAstToMdast - node snapshots | role abbr 1`] = `"<Abbr>abbr</Abbr>"`;

exports[`convertSnootyAstToMdast - node snapshots | section with html_id emits RefTarget anchor 1`] = `
"<RefTarget id="my-section" />

# My Section

Body text."
`;

exports[`convertSnootyAstToMdast - node snapshots | section with title 1`] = `
"# Section Title

Section body"
`;

exports[`convertSnootyAstToMdast - node snapshots | simple text node 1`] = `"Just text"`;

exports[`convertSnootyAstToMdast - node snapshots | standalone list_item 1`] = `"* Alone item"`;

exports[`convertSnootyAstToMdast - node snapshots | standalone step with plain text argument 1`] = `
"<Step>
  <StepHeading>
    Connect to your deployment
  </StepHeading>

  Use the connection string.
</Step>"
`;

exports[`convertSnootyAstToMdast - node snapshots | standalone step with rich argument (guilabel) 1`] = `
"<Step>
  <StepHeading>
    Click <Guilabel>Save</Guilabel>
  </StepHeading>

  The settings are saved.
</Step>"
`;

exports[`convertSnootyAstToMdast - node snapshots | standalone step without argument 1`] = `
"<Step>
  Body only step.
</Step>"
`;

exports[`convertSnootyAstToMdast - node snapshots | strong 1`] = `"**bold**"`;

exports[`convertSnootyAstToMdast - node snapshots | substitution node 1`] = `"<Reference refKey="product" type="substitution" />"`;

exports[`convertSnootyAstToMdast - node snapshots | substitution node with abbr child 1`] = `"<Abbr tooltip="Amazon Web Services">AWS</Abbr>"`;

exports[`convertSnootyAstToMdast - node snapshots | substitution reference 1`] = `"Hello <Reference refKey="product" type="substitution" />"`;

exports[`convertSnootyAstToMdast - node snapshots | substitution_definition node 1`] = `""`;

exports[`convertSnootyAstToMdast - node snapshots | superscript and subscript 1`] = `"sup and sub"`;

exports[`convertSnootyAstToMdast - node snapshots | tab with inline code in title (DOP-6843: preserves code formatting in tab name) 1`] = `
"<Tabs>
  <Tab tabid="mongosh" name={<><code>mongosh</code></>}>
    mongosh content
  </Tab>

  <Tab tabid="compass" name={<>Use <code>Compass</code></>}>
    Compass content
  </Tab>
</Tabs>"
`;

exports[`convertSnootyAstToMdast - node snapshots | tab with nested argument title 1`] = `
"<Tabs>
  <Tab tabid="mac-linux" name="macOS / Linux">
    Some content
  </Tab>
</Tabs>"
`;

exports[`convertSnootyAstToMdast - node snapshots | table 1`] = `
"<Table>
  <TableRow>
    <TableCell>
      Cell
    </TableCell>
  </TableRow>
</Table>"
`;

exports[`convertSnootyAstToMdast - node snapshots | table head 1`] = `
"<TableHead>
  <TableRow>
    <TableCell>
      Header
    </TableCell>
  </TableRow>
</TableHead>"
`;

exports[`convertSnootyAstToMdast - node snapshots | tabs container 1`] = `
"<Tabs>
  Tab content
</Tabs>"
`;

exports[`convertSnootyAstToMdast - node snapshots | tabs-selector directive 1`] = `
"---
options:
  tabs-selector-position: main

---

<TabsSelector />"
`;

exports[`convertSnootyAstToMdast - node snapshots | target node 1`] = `"<RefTarget id="my-target" />"`;

exports[`convertSnootyAstToMdast - node snapshots | target_identifier 1`] = `""`;

exports[`convertSnootyAstToMdast - node snapshots | thematic break 1`] = `"***"`;

exports[`convertSnootyAstToMdast - node snapshots | title node 1`] = `"# A Title"`;

exports[`convertSnootyAstToMdast - node snapshots | title reference 1`] = `"*Titled*"`;

exports[`convertSnootyAstToMdast - node snapshots | unknown node type 1`] = `"<!-- unsupported: mystery -->"`;
